--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -108,7 +108,8 @@
         <p class="dark-grey-text mt-4">
           <i class="fa fa-quote-left pr-2"></i>
           Doge is a best web developer in this univers, Engineer programmer  with advanced technologies of dogs,
-          is winner and a very good dog</p>
+          is winner and a very good dog
+          <i class="fa fa-quote-right pr-2"></i></p>
       </mdb-card-body>
     </mdb-card>
     <!--Card-->
